data/collection/fixes/descriptions/kotlin/KT-18966
```
@kotlin.internal.InlineOnly
inline fun foo() {}
```

```
1.kt:1:2: error: cannot access 'InlineOnly': it is internal in 'internal'
@kotlin.internal.InlineOnly
 ^
1.kt:1:18: error: cannot access 'InlineOnly': it is internal in 'internal'
@kotlin.internal.InlineOnly
                 ^
```

Expected error message: `cannot access 'InlineOnly': it is internal in 'kotlin.internal'`